--- a/css/grid.css
+++ b/css/grid.css
@@ -1,19 +1,27 @@
-body,html{
+html, body {
+
     height: 100%;
     background: beige;
     font-family: sans-serif;
     font-weight: bold;
+    box-sizing: border-box;
+
 }
 
+.container > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .container{
 
     height: 100%;
     width: 100%;
-    text-align: center;
     display: grid;
     /* grid-template-columns: repeat(2, 1fr); */
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 40px 200px 40px;;
+    grid-template-columns: repeat(6, 1fr);
+    /* grid-template-rows: 40px auto 40px; */
+    grid-template-rows: repeat(2, 100px);
     grid-gap: 3px;
 }
 
@@ -22,12 +30,13 @@ body,html{
     grid-column-end: 3; */
     /* grid-column: 1/3 */
     grid-column: 2 / -1;
-    align-content: center;
+   
 }
 
 .menu{
 
-    grid-row: 1/3;
+    /* grid-column: 1/3; */
+    grid-row: 1/4;
     
 
 }
@@ -37,7 +46,7 @@ body,html{
 }
 .footer{
 
-    grid-column: 1 / -1;
+    grid-column: 2 / -1;
     /* grid-column: 1/3; */
     /* or can be written as
     grid-column: 1/span 2;
