--- a/css/grid.css
+++ b/css/grid.css
@@ -15,38 +15,43 @@ html, body {
 }
 .container{
 
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     display: grid;
+    /* grid-template-columns: repeat(12, 1fr); */
     /* grid-template-columns: repeat(2, 1fr); */
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
     /* grid-template-rows: 40px auto 40px; */
-    grid-template-rows: repeat(2, 100px);
+    grid-template-rows: repeat( 100px);
+    grid-auto-rows: 100px;
+    /* grid-template-rows: */
     grid-gap: 3px;
+    /* justify-items: end; */
+    /* align-items: center; */
 }
 
 .header{
     /* grid-column-start: 1;
     grid-column-end: 3; */
     /* grid-column: 1/3 */
-    grid-column: 2 / -1;
+    grid-column: 1 / -1;
    
 }
 
 .menu{
 
-    /* grid-column: 1/3; */
-    grid-row: 1/4;
+    grid-column: 1/3;
+    grid-row: 2/3;
     
 
 }
 .content{
-    grid-column: 2/-1;
+    grid-column: 3/-1;
    
 }
 .footer{
 
-    grid-column: 2 / -1;
+    grid-column: 1 / -1;
     /* grid-column: 1/3; */
     /* or can be written as
     grid-column: 1/span 2;
