--- a/css/page.css
+++ b/css/page.css
@@ -6,52 +6,121 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    font-weight: lighter !important;
+    background-color: #202020;
+    color: white;
 }
 
 header{
-    background-color: rgba(40, 40, 40, 0.852);
+
+    display: flex;
+    align-content: center;
     color: white;
-    padding: 10px;
-    /* opacity: 1; */
-    /* background: transparent; */
-    background: linear-gradient(to left, rgb(62, 62, 62), rgb(24, 24, 24) 60%, #eee 75%, #333 75%);
+    /* padding: 10px; */
+    height: 10vh;
+    
 }
 
 .header-wrapper{
     display: flex;
-    /* background-color: beige; */
     width: 80%;
     margin: auto;
-    /* justify-content: space-between; */
+    align-items: center;
+    border-bottom: 1px solid rgb(64, 191, 191);
+    padding-bottom: 15px;
 }
 
 .logo-container{
-    /* background-color: bisque; */
     flex: 1;
 }
 
 nav{
 
-    /* display: flex; */
     flex: 2;
-    /* background-color: aqua; */
     justify-content: space-between;
 }
 
 .nav-links{
     display: flex;
-    /* justify-content: space-around; */
     justify-content: flex-end;
     
 
 }
 .nav-link{
     list-style: none;
-    padding : 0px 15px 0px 15px;
+    padding : 0px 0px 0px 30px;
+
 }
 
 .nav-link > a{
     color: white;
     text-decoration: none;
 
+}
+
+.presentation{
+    display: flex;
+    margin: auto;
+    width: 80%;
+    flex-flow: row nowrap;
+    height: 90vh;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.introduction{
+    flex: 3;
+}
+
+.cover{
+    flex: 1;
+    height: auto;
+}
+
+.cover img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.intro-text{
+    font-size: 30px;
+    text-align: justify;
+    /* padding-right: 15px; */
+    margin-right: 100px;
+}
+
+#name{
+    color: rgb(64, 191, 191);
+}
+
+@media screen and (max-width: 1024px){
+    body{
+       /* display: none; */
+    }
+
+    .presentation{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    .introduction{
+        text-align: center;
+        
+    }
+    .intro-text{
+        margin-right: 0px;
+        text-align: start;
+    }
+
+    .cover{
+        
+        height: 30vh;
+
+    }
+    .cover img{
+        height: 20vh;
+        width: 20vh;
+        border-radius: 50%;
+    }
 }
