--- a/css/page.css
+++ b/css/page.css
@@ -107,8 +107,10 @@ nav{
     /* border: 1px solid white; */
     align-items: center;
     justify-content: space-evenly;
-
+    flex-wrap: wrap;
     text-align: center;
+    flex-direction: row;
+    
 }
 
 /* .tech-stickers{
@@ -116,23 +118,52 @@ nav{
 } */
 
 .techHeading{
-    flex-grow: 1;
-    flex-basis: 0;
+    flex: 1 0 100%;
+    text-align: center;
+
 }
 
 .sticker-wrapper i{
-    font-size: 60px !important;
+    font-size: 100px !important;
     padding: 8px;
     color: rgb(64, 191, 191);
 }
 
 .sticker-wrapper{
-    flex-grow: 2;
-    flex-basis: 0;
+    flex: 1;
+    position: relative;
+
 }
 
 
+.description-about{
+    flex: 1;
+    text-align: left;
+    font-size: 30px;
+
+}
+
+/* span:hover::before{
+    content: attr(data-tooltip);
+    color: rgb(64, 191, 191);
+    position: absolute;
+    
+    text-align: center;
+    
+  
+    border: 1px solid white;
+    
+} */
+
+
+.contactWrapper input , textarea{
+    border-bottom: 1px solid rgb(64, 191, 191);
+    border-right: none;
+    padding: 8px;
+    background-color: #202020;
+}
 @media screen and (max-width: 1024px){
+
     body{
        /* display: none; */
     }
