--- a/css/page.css
+++ b/css/page.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: 'Poppins', sans-serif;
     font-weight: lighter !important;
     background-color: #202020;
     color: white;
+    
+    scroll-behavior: smooth;
 }
 
 header{
@@ -26,6 +31,9 @@ header{
     
 }
 
+.logo-container h3{
+    font-size: 30px;
+}
 .header-wrapper{
     display: flex;
     width: 60%;
@@ -131,7 +139,7 @@ nav{
 
 .sticker-wrapper{
     flex: 1;
-    position: relative;
+    /* position: relative; */
 
 }
 
@@ -143,6 +151,39 @@ nav{
 
 }
 
+
+.contact-me{
+
+    margin:auto;
+    width:60%;
+    height: 90vh;
+    /* border: 1px solid white; */
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.contactWrapper{
+    width:100%;
+    /* border: 1px solid white; */
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contactWrapper form div{
+    padding : 10px;
+    width: 40%;
+}
+
+.contactWrapper form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
 /* span:hover::before{
     content: attr(data-tooltip);
     color: rgb(64, 191, 191);
@@ -157,10 +198,28 @@ nav{
 
 
 .contactWrapper input , textarea{
+    border: none;
     border-bottom: 1px solid rgb(64, 191, 191);
-    border-right: none;
+    width: 100%;
     padding: 8px;
     background-color: #202020;
+    outline: none;
+    color: white;
+}
+
+.contactWrapper button{
+    border: 1px solid rgb(64, 191, 191);
+    padding: 8px;
+    width: 100%;
+    background-color: #202020;
+    color:rgb(64, 191, 191)
+
+}
+
+.contactWrapper button:hover{
+    
+    cursor: pointer;
+
 }
 @media screen and (max-width: 1024px){
 
